k8s/manifests-6f0223/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-6f0223
  namespace: journee
  labels:
    app: journee-6f0223
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-6f0223
  template:
    metadata:
      labels:
        app: journee-6f0223
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-6f0223
          image: gcr.io/my-docker-471807/journee:v7.2.0
          ports:
            - containerPort: 3000
