k8s/manifests-6f0223/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-6f0223
  namespace: journee
spec:
  selector:
    app: journee-6f0223
  ports:
    - port: 80
      targetPort: 3000
